--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button>Login</button>
+                    <button id="form-btn">Login</button>
                 </div>
             </form>
         </div>
