--- a/signin.html
+++ b/signin.html
@@ -11,9 +11,10 @@
 
 <body>
     <section id="container">
-        <h2>Login</h2>
+        <!-- <h2>Login</h2> -->
         <div id="form-container">
             <form action="index.html">
+                <label for="header">Login</label>
                 <div class="form-grp">
                     <label for="username">
                         <input type="text" id="username" placeholder="Enter Username">
