signup page work

--- a/signin.html
+++ b/signin.html
@@ -14,20 +14,27 @@
         <!-- <h2>Login</h2> -->
         <div id="form-container">
             <form action="index.html">
-                <label for="header">Login</label>
+                <h2>Sign Up</h2>
                 <div class="form-grp">
                     <label for="username">
-                        <input type="text" id="username" placeholder="Enter Username">
+                        <input type="text" id="username" placeholder="Full Name">
                     </label>
                 </div>
                 <div class="form-grp">
-                    <label for="password">
-                        <input type="text" id="password" placeholder="Enter Password">
+                    <label for="email">
+                        <input type="email" id="email" placeholder="Email">
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn">Login</button>
+                    <label for="contact">
+                        <input type="phone" id="contact" placeholder="Mobile Number">
+                    </label>
                 </div>
+                <div class="form-grp">
+                    <button id="form-btn">Create Account</button>
+                </div>
+                <span>Already have an account?</span><a href="login.html">Log in</a>
+                <p></p>
             </form>
         </div>
     </section>
