modified login page

--- a/login.html
+++ b/login.html
@@ -20,12 +20,19 @@
                         <input type="tel" id="contact" placeholder="Phone number" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" required>
                     </label>
                 </div>
+                <div class="form-grp">
+                    <button id="form-btn">Send the OTP</button>
+                </div>
                 <p>OR</p>
                 <div class="form-grp">
                     <label for="email">
                         <input type="email" id="email" placeholder="Email" required>
                     </label>
                 </div>
+                <div class="form-grp">
+                    <button id="form-btn">Send the code</button>
+                </div>
+                <span>New to HealthyEats?</span><a href="signin.html">Create account</a>
                 <p></p>
             </form>
         </div>
