--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn">Send the OTP</button>
+                    <button id="form-btn" type="submit">Send the OTP</button>
                 </div>
                 <p>OR</p>
                 <div class="form-grp">
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn">Send the code</button>
+                    <button id="form-btn" type="submit">Send the code</button>
                 </div>
                 <span>New to HealthyEats?</span><a href="signin.html">Create account</a>
                 <p></p>
