--- a/signin.html
+++ b/signin.html
@@ -31,7 +31,7 @@
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn">Create Account</button>
+                    <button id="form-btn" type="submit">Create Account</button>
                 </div>
                 <span>Already have an account?</span><a href="login.html">Log in</a>
                 <p></p>
