--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="nav-head">
             <div id="nav-home">
                 <!-- <li id="nav-home"> -->
-                    <a href="https://www.google.com"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
+                    <a href="index.html"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
                 <!-- </li> -->
             </div>
             <ul id="nav">
