--- a/login.html
+++ b/login.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/login.css">
+    <script src="JS/signin.js"></script>
     <title>Login</title>
 </head>
 <body>
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="index.html">
+            <form action="#" name="loginform" onsubmit="return validateform()">
                 <h2>Login</h2>
                 <div class="form-grp">
                     <label for="contact">
