--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <form action="#" name="loginform" onsubmit="return validateform()" method="post">
                 <h2>Login</h2>
                 <div class="form-grp">
-                    <input type="tel" name="contact" placeholder="Phone number" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required><span class="ferror"></span>
+                    <input type="tel" name="contact" placeholder="Phone number"  required><span class="ferror"></span>
                 </div>
                 <div class="form-grp">
                     <button id="form-btn" type="submit">Send the OTP</button>
