--- a/afterlogin.html
+++ b/afterlogin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/afterlogin.css">
     <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
     css when the screen's size goes lower than 1136px-->
     <title>HealthyEats</title>
@@ -17,24 +17,24 @@
         <div id="nav-head">
             <div id="nav-home">
                 <!-- <li id="nav-home"> -->
-                    <a href="index.html"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
+                    <a href="afterlogin.html"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
                 <!-- </li> -->
             </div>
             <ul id="nav">
             <!-- </ul>
             <ul id="nav-items"> -->
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a href="offer.html">Offers</a> 
-                </li> -->
-                <li class="nav-item">
-                    <a href="login.html">Login</a> 
                 </li>
                 <li class="nav-item">
-                    <a href="signin.html">Sign up</a> 
+                    <a href="contact.html">Help</a> 
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
+                    <a href="#">UserName</a> 
+                </li>
+                <li class="nav-item">
                     <a href="cart.html">Cart</a>
-                </li> -->
+                </li>
             </ul>
         </div>
         <h1><i>HealthyEats</i></h1>
