--- a/help.html
+++ b/help.html
@@ -5,11 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/afterlogin.css">
-    <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
-    css when the screen's size goes lower than 1136px-->
-    <title>HealthyEats</title>
-    <link rel="icon" href="/img/icons8-16.png">
+    <link rel="stylesheet" href="css/help.css">
+    <title>Help</title>
 </head>
 
 <body>
@@ -37,34 +34,49 @@
                 </li>
             </ul>
         </div>
-        <h1><i>HealthyEats</i></h1>
-        <!-- <hr> -->
+        <!-- <h1><i>HealthyEats</i></h1>
         <div id="searchdiv">
             <label for="searchbar">
                 <input type="text" placeholder="Search" id="searchbar">
             </label>
-        </div>
+        </div> -->
     </div>
-    <section>
-        <div id="main">
-            <div class="card">
-                <a href="https://www.google.com"><img src="img/salad.jpg" alt="Fresh Salad!!">
-                    <h4>Order Salad</h4>
-                    <p>Stay home and enjoy the fresh goodness</p>
-                </a>
-            </div>
-            <div class="card">
-                <a href="https://www.google.com"><img src="img/fruit.jpg" alt="Yummy Fruit Bowl!!">
-                    <h4>Order Fruit Bowl</h4>
-                    <p>Keep yourself hydrated with exotic fruits</p>
-                </a>
-            </div>
-            <div class="card">
-                <a href="https://www.google.com"><img src="img/drink.jpg" alt="Healthy Drinks!!">
-                    <h4>Order Fresh Drinks</h4>
-                    <p>Drink healthy, stay healthy</p>
-                </a>
-            </div>
+    <section id="main">
+        <!-- <div id="sidebar">
+            <ul>
+                <li>FAQs</li>
+            </ul>
+        </div> -->
+        <div id="content">
+            <pre>
+                FAQs
+                <hr>
+                What is Swiggy Customer Care Number?
+                <hr>
+                I want to explore career opportunities with Swiggy
+                <hr>
+                I want to provide feedback
+                <hr>
+                Can I edit my order?
+                <hr>
+                I want to cancel my order
+                <hr>
+                Will Swiggy be accountable for quality/quantity?
+                <hr>
+                Is there a minimum order value?
+                <hr>
+                Do you charge for delivery?
+                <hr>
+                How long do you take to deliver?
+                <hr>
+                What are your delivery hours?
+                <hr>
+                Can I order from any location?
+                <hr>
+                Is single order from many restaurants possible?
+                <hr>
+                Do you support bulk orders?
+            </pre>
         </div>
     </section>
     <footer>
