--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="#" name="loginform" method="post"> 
-                <!-- onsubmit="return validateform()" -->
+            <form action="#" name="loginform" > 
+                <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
                     <input type="text" name="username" placeholder="Username"  required><span class="ferror"></span>
