--- a/offers.html
+++ b/offers.html
@@ -32,8 +32,8 @@
                 </li>
             </ul>
         </div>
-        <div class="main">
-            <img src="/img/discount.png">
-        </div>
+        <!-- <div class="main">
+            <img src="/img/discount.png" id="image">
+        </div> -->
 </body>
 </html>
