--- a/afterlogin.html
+++ b/afterlogin.html
@@ -24,7 +24,7 @@
                 <!-- </ul>
             <ul id="nav-items"> -->
                 <li class="nav-item">
-                    <a href="offer.html">Offers</a>
+                    <a href="offers.html">Offers</a>
                 </li>
                 <li class="nav-item">
                     <a href="help.html">Help</a>
