--- a/offers.html
+++ b/offers.html
@@ -32,8 +32,10 @@
                 </li>
             </ul>
         </div>
-        <!-- <div class="main">
+        <div class="main">
+            <p>Offers for you</p>
+            <p>Explore top deals and offers exclusively for you!</p>
             <img src="/img/discount.png" id="image">
-        </div> -->
+        </div>
 </body>
 </html>
