--- a/offers.html
+++ b/offers.html
@@ -33,8 +33,8 @@
             </ul>
         </div>
         <div class="main">
-            <p>Offers for you</p>
-            <p>Explore top deals and offers exclusively for you!</p>
+            <p><h1>Offers for you</h1></p>
+            <p><h3>Explore top deals and offers exclusively for you!</h3></p>
             <img src="/img/discount.png" id="image">
         </div>
 </body>
