--- a/offers.html
+++ b/offers.html
@@ -33,9 +33,13 @@
             </ul>
         </div>
         <div class="main">
-            <p><h1>Offers for you</h1></p>
-            <p><h3>Explore top deals and offers exclusively for you!</h3></p>
-            <img src="/img/discount.png" id="image">
+            <div class="para">
+                <p><h2>Offers for you</h2></p>
+                <p><h4>Explore top deals and offers exclusively for you!</h4></p>
+            </div>
+            <div id="image">
+                <img src="/img/discount.png">
+            </div> 
         </div>
 </body>
 </html>
