--- a/signin.html
+++ b/signin.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
+    <div id="navbar">
+        <img src="img/icons8-96.png" id="icon">
+    </div>
+   
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-container">
             <form action="login.html">
-                <h2>Sign Up</h2>
+                <h2>Create you account</h2>
                 <div class="form-grp">
                     <label for="username">
                         <input type="text" id="username" placeholder="Full Name" required>
