--- a/signin.html
+++ b/signin.html
@@ -11,14 +11,13 @@
 
 <body>
     <div id="navbar">
-        <img src="img/icons8-96.png" id="icon">
+        <a href="afterlogin.html"><img src="/img/icons8-96.png" alt="HealthyEats" id="icon"></a>
     </div>
-   
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-container">
             <form action="login.html">
-                <h2>Create you account</h2>
+                <h2 id="tag">Sign Up</h2>
                 <div class="form-grp">
                     <label for="username">
                         <input type="text" id="username" placeholder="Full Name" required>
