--- a/afterlogin.html
+++ b/afterlogin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/afterlogin.css">
     <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
     css when the screen's size goes lower than 1136px-->
+    <script type="text/javascript" src="/JS/afterlogin.js"></script>
     <title>HealthyEats</title>
     <link rel="icon" href="/img/icons8-16.png">
 </head>
@@ -29,8 +30,8 @@
                 <li class="nav-item">
                     <a href="help.html">Help</a>
                 </li>
-                <li class="nav-item">
-                    <a href="#">UserName</a>
+                <li class="nav-item" id="user">
+                    <a>UserName</a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
