--- a/signin.html
+++ b/signin.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div id="navbar">
+    <!-- <div id="navbar">
         <a href="afterlogin.html"><img src="/img/icons8-96.png" alt="HealthyEats" id="icon"></a>
-    </div>
+    </div> -->
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-container">
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-grp">
                     <label for="contact">
-                        <input type="tel" id="contact" placeholder="Mobile Number" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" required>
+                        <input type="tel" id="contact" placeholder="Mobile Number" required>
                     </label>
                 </div>
                 <div class="form-grp">
