--- a/Home.html
+++ b/Home.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/afterlogin.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
     css when the screen's size goes lower than 1136px-->
-    <script type="text/javascript" src="/JS/afterlogin.js"></script>
+    <script type="text/javascript" src="/JS/home.js"></script>
     <title>HealthyEats</title>
     <link rel="icon" href="/img/icons8-16.png">
 </head>
@@ -18,7 +18,7 @@
         <div id="nav-head">
             <div id="nav-home">
                 <!-- <li id="nav-home"> -->
-                <a href="afterlogin.html"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
+                <a href="Home.html"><img src="/img/icons8-96.png" alt="HealthyEats"></a>
                 <!-- </li> -->
             </div>
             <ul id="nav">
