--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="afterlogin.html" name="loginform" > 
+            <form action="Home.html" name="loginform" > 
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
