--- a/signin.html
+++ b/signin.html
@@ -17,21 +17,21 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-container">
-            <form action="login.html">
+            <form action="login.html" name="signinform">
                 <h2 id="tag">Sign Up</h2>
                 <div class="form-grp">
                     <label for="username">
-                        <input type="text" id="username" placeholder="Full Name" required>
+                        <input type="text" id="uname" placeholder="Full Name" required>
                     </label>
                 </div>
                 <div class="form-grp">
-                    <label for="email">
-                        <input type="email" id="email" placeholder="Email" required>
+                    <label for="pass">
+                        <input type="password" id="pass" placeholder="Password" required>
                     </label>
                 </div>
                 <div class="form-grp">
-                    <label for="contact">
-                        <input type="tel" id="contact" placeholder="Mobile Number" required>
+                    <label for="passagain">
+                        <input type="password" id="passagain" placeholder="Re-enter Password" required>
                     </label>
                 </div>
                 <div class="form-grp">
