--- a/login.html
+++ b/login.html
@@ -17,10 +17,10 @@
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
-                    <input type="text" name="username" placeholder="Username"  required><span class="ferror"></span>
+                    <input type="text" name="username" placeholder="Username"  required>
                 </div>
                 <div class="form-grp">
-                    <input type="password" name="password" placeholder="Password"  required><span class="ferror"></span>
+                    <input type="password" name="password" placeholder="Password"  required>
                 </div>
                 <div class="form-grp">
                     <button id="form-btn" type="submit" onclick="login()">Login</button>
