--- a/signin.html
+++ b/signin.html
@@ -35,7 +35,7 @@
                     </label>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn" type="submit">Create Account</button>
+                    <button id="form-btn" type="submit" onclick="signin()">Create Account</button>
                 </div>
                 <span>Already have an account?</span><a href="login.html">Log in</a>
                 <p></p>
