--- a/Home.html
+++ b/Home.html
@@ -30,8 +30,8 @@
                 <li class="nav-item">
                     <a href="help.html">Help</a>
                 </li>
-                <li class="nav-item" id="user">
-                    <a>UserName</a>
+                <li class="nav-item">
+                    <a  id="user">UserName</a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
