--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
                     <a href="help.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a  id="user">UserName</a>
+                    <a  id="user"></a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
