--- a/html/Home.html
+++ b/html/Home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
     css when the screen's size goes lower than 1136px-->
-    <script type="text/javascript" src="/JS/home.js"></script>
+    <script type="text/javascript" src="/JS/userData.js"></script>
     <title>HealthyEats</title>
     <link rel="icon" href="/img/icons8-16.png">
 </head>
@@ -31,7 +31,7 @@
                     <a href="help.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a  id="user"></a>
+                    <a id="user"></a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
