--- a/html/index.html
+++ b/html/index.html
@@ -42,19 +42,19 @@
     <section>
     <div id="main">
         <div class="card">
-            <a href="https://www.google.com"><img src="img/salad.jpg" alt="Fresh Salad!!">
+            <a href="https://www.google.com"><img src="/img/salad.jpg" alt="Fresh Salad!!">
             <h4>Order Salad</h4>
             <p>Stay home and enjoy the fresh goodness</p>
             </a>
         </div>
         <div class="card">
-            <a href="https://www.google.com"><img src="img/fruit.jpg" alt="Yummy Fruit Bowl!!">
+            <a href="https://www.google.com"><img src="/img/fruit.jpg" alt="Yummy Fruit Bowl!!">
             <h4>Order Fruit Bowl</h4>
             <p>Keep yourself hydrated with exotic fruits</p>
             </a>    
         </div>
         <div class="card">
-            <a href="https://www.google.com"><img src="img/drink.jpg" alt="Healthy Drinks!!">
+            <a href="https://www.google.com"><img src="/img/drink.jpg" alt="Healthy Drinks!!">
             <h4>Order Fresh Drinks</h4>
             <p>Drink healthy, stay healthy</p>
             </a>    
