--- a/html/Home.html
+++ b/html/Home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" media="screen and (max-width: 1136px)" href="/css/phone.css"> <!--this will trigger phone 
     css when the screen's size goes lower than 1136px-->
-    <script type="text/javascript" src="/JS/userData.js"></script>
+    <script type="text/javascript" src="/JS/home.js"></script>
     <title>HealthyEats</title>
     <link rel="icon" href="/img/icons8-16.png">
 </head>
@@ -31,7 +31,7 @@
                     <a href="help.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a id="user"></a>
+                    <a id="user">Hello</a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
@@ -49,19 +49,19 @@
     <section>
         <div id="main">
             <div class="card">
-                <a href="https://www.google.com"><img src="img/salad.jpg" alt="Fresh Salad!!">
+                <a href="#"><img src="/img/salad.png" alt="Fresh Salad!!">
                     <h4>Order Salad</h4>
                     <p>Stay home and enjoy the fresh goodness</p>
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.google.com"><img src="img/fruit.jpg" alt="Yummy Fruit Bowl!!">
+                <a href="#"><img src="/img/fruit.jpg" alt="Yummy Fruit Bowl!!">
                     <h4>Order Fruit Bowl</h4>
                     <p>Keep yourself hydrated with exotic fruits</p>
                 </a>
             </div>
             <div class="card">
-                <a href="https://www.google.com"><img src="img/drink.jpg" alt="Healthy Drinks!!">
+                <a href="#"><img src="/img/drink.jpg" alt="Healthy Drinks!!">
                     <h4>Order Fresh Drinks</h4>
                     <p>Drink healthy, stay healthy</p>
                 </a>
