--- a/html/login.html
+++ b/html/login.html
@@ -13,17 +13,17 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="Home.html" name="loginform" > 
+            <form action="Home.html" name="login-form" > 
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
-                    <input type="text" name="username" placeholder="Username"  required>
+                    <input type="text" name="username" id="form-username" placeholder="Username"  required>
                 </div>
                 <div class="form-grp">
-                    <input type="password" name="password" placeholder="Password"  required>
+                    <input type="password" name="password" id="form-password" placeholder="Password"  required>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn" type="submit" onclick="login()">Login</button>
+                    <button id="form-btn" type="submit">Login</button>
                 </div>
                 <!-- <p>OR</p>
                 <div class="form-grp">
