--- a/html/Home.html
+++ b/html/Home.html
@@ -31,7 +31,7 @@
                     <a href="help.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a id="user">Hello</a>
+                    <span id="user"></span>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
@@ -55,13 +55,13 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#"><img src="/img/fruit.jpg" alt="Yummy Fruit Bowl!!">
+                <a href="#"><img src="/img/fruit.png" alt="Yummy Fruit Bowl!!">
                     <h4>Order Fruit Bowl</h4>
                     <p>Keep yourself hydrated with exotic fruits</p>
                 </a>
             </div>
             <div class="card">
-                <a href="#"><img src="/img/drink.jpg" alt="Healthy Drinks!!">
+                <a href="#"><img src="/img/drink.png" alt="Healthy Drinks!!">
                     <h4>Order Fresh Drinks</h4>
                     <p>Drink healthy, stay healthy</p>
                 </a>
