--- a/html/login.html
+++ b/html/login.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/login.css">
     <script type="text/javascript" src="/JS/userData.js"></script>
     <title>Login</title>
+    <link rel="icon" href="/img/icons8-16.png">
+
 </head>
 <body>
     <section id="container">
@@ -23,7 +25,7 @@
                     <input type="password" name="password" id="form-password" placeholder="Password"  required>
                 </div>
                 <div class="form-grp">
-                    <button id="form-btn" type="submit">Login</button>
+                    <input id="form-btn" type="submit" value="Login">
                 </div>
                 <!-- <p>OR</p>
                 <div class="form-grp">
