--- a/html/Home.html
+++ b/html/Home.html
@@ -31,7 +31,7 @@
                     <a href="help.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <span id="user"></span>
+                    <a id="user"></a>
                 </li>
                 <li class="nav-item">
                     <a href="cart.html">Cart</a>
