--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="/html/Home.html" id="login-form"> 
+            <form action="/html/Home.html" id="login-form" method="post"> 
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
