--- a/html/login.html
+++ b/html/login.html
@@ -16,6 +16,7 @@
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
             <form action="/html/Home.html" id="login-form" method="post"> 
+                <!-- method post should hide user details from the URL but it gives 403 error -->
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
                 <div class="form-grp">
