--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/login.css">
-    <script type="text/javascript" src="/JS/userData.js"></script>
+    <script type="text/javascript" src="/JS/login.js"></script>
     <title>Login</title>
     <link rel="icon" href="/img/icons8-16.png">
 
@@ -15,7 +15,7 @@
     <section id="container">
         <!-- <h2>Login</h2> -->
         <div id="form-login-container">
-            <form action="/html/Home.html" id="login-form" method="post"> 
+            <form action="/html/Home.html" id="login-form"> 
                 <!-- method post should hide user details from the URL but it gives 403 error -->
                 <!-- onsubmit="return validateform()"method="post" -->
                 <h2>Login</h2>
